# sumos-mac-sudden-motion-sensor

./: .gitignore  CMakeLists.txt  README.md
script/: build.sh  build_JNI_Lib.sh
src/c/: main.c  unimotion.c
src/java/: unimotion.java
